# thepkg

./: .gitignore  Cargo.toml  Dockerfile  LICENSE.md  Makefile  README.md  rustfmt.toml
.github/: dependabot.yml
.github/workflows/: cargo_test.yaml
Dev/: Dockerfile
ref/: Features.md
src/: Image.rs  cryptlib.rs  imagefn.rs  iofn.rs  lib.rs  scrapefn.rs
tests/: Image_tests.rs  cryptlib_tests.rs  imagefn_tests.rs  iofn_tests.rs
