[package]
name = "thepkg"
authors = ["kenf1"]
repository = "https://github.com/kenf1/thepkg"
description = "The Package: Rust edition"
license = "GNU General Public License v3.0"

version = "1.0.0"
edition = "2021"

[lib]
name = "thepkg"
path = "src/lib.rs"

include = [
    "src/lib.rs",
    "src/cryptlib.rs",
    "src/imagefn.rs",
    "src/scrapefn.rs",
    "src/iofn.rs",
    "Cargo.toml",
    "LICENSE",
]

[features]
default = []
all = ["io", "qr", "webscrape", "crypt"]
crypt = []
io = ["csv", "polars/lazy", "dotenv"]
qr = ["bardecoder", "image", "reqwest/blocking"]
webscrape = ["reqwest/blocking", "select"]

[dependencies]
bardecoder = { version = "0.5.0", optional = true }
csv = { version = "1.3.0", optional = true }
dotenv = { version = "0.15.0", optional = true }
image = { version = "0.24.9", optional = true }
polars = { version = "0.44.0", optional = true, features = ["lazy"] }
reqwest = { version = "0.12.8", optional = true, features = ["blocking"] }
select = { version = "0.6.0", optional = true }
