[package]
name = "thepkg"
authors = ["kenf1"]
repository = "https://github.com/kenf1/thepkg"
description = "The Package: Rust edition"
license = "GNU General Public License v3.0"

version = "1.3.0"
edition = "2024"

[lib]
name = "thepkg"
path = "src/lib.rs"

include = [
    "src/lib.rs",
    "src/cryptlib.rs",
    "src/imagefn.rs",
    "src/scrapefn.rs",
    "src/iofn.rs",
    "Cargo.toml",
    "LICENSE",
]

[features]
default = []
all = ["io", "qr", "webscrape", "crypt"]
crypt = []
io = ["csv", "polars/lazy", "dotenvy"]
qr = ["bardecoder", "image", "reqwest/blocking"]
webscrape = ["reqwest/blocking", "select"]
archive = []

[dependencies]
bardecoder = { version = "0.5.0", optional = true }
csv = { version = "1.4.0", optional = true }
dotenvy = { version = "0.15.7", optional = true }
image = { version = "0.24.9", optional = true } # breaking changes after v0.24.9
polars = { version = "0.51.0", optional = true, features = [
    "lazy",
] } # breaking changes after v0.51.0
reqwest = { version = "0.13.1", optional = true, features = ["blocking"] }
select = { version = "0.6.1", optional = true }
